logs/dag_id=dag_top_best_sellers_books/run_id=manual__2024-12-22T14:55:10.356955+00:00/task_id=create_date_dim_table/attempt=3.log
[2024-12-22T16:15:05.671+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-12-22T16:15:05.775+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_top_best_sellers_books.create_date_dim_table manual__2024-12-22T14:55:10.356955+00:00 [queued]>
[2024-12-22T16:15:05.806+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_top_best_sellers_books.create_date_dim_table manual__2024-12-22T14:55:10.356955+00:00 [queued]>
[2024-12-22T16:15:05.809+0000] {taskinstance.py:2866} INFO - Starting attempt 3 of 4
[2024-12-22T16:15:05.851+0000] {taskinstance.py:2889} INFO - Executing <Task(PostgresOperator): create_date_dim_table> on 2024-12-22 14:55:10.356955+00:00
[2024-12-22T16:15:05.879+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70: DeprecationWarning: This process (pid=1030) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-12-22T16:15:05.893+0000] {standard_task_runner.py:72} INFO - Started process 1042 to run task
[2024-12-22T16:15:05.896+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'dag_top_best_sellers_books', 'create_date_dim_table', 'manual__2024-12-22T14:55:10.356955+00:00', '--job-id', '42', '--raw', '--subdir', 'DAGS_FOLDER/dag_test.py', '--cfg-path', '/tmp/tmpuytsjkbm']
[2024-12-22T16:15:05.912+0000] {standard_task_runner.py:105} INFO - Job 42: Subtask create_date_dim_table
[2024-12-22T16:15:08.249+0000] {task_command.py:467} INFO - Running <TaskInstance: dag_top_best_sellers_books.create_date_dim_table manual__2024-12-22T14:55:10.356955+00:00 [running]> on host c50092bbd7fa
[2024-12-22T16:15:08.624+0000] {taskinstance.py:3132} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='dag_top_best_sellers_books' AIRFLOW_CTX_TASK_ID='create_date_dim_table' AIRFLOW_CTX_EXECUTION_DATE='2024-12-22T14:55:10.356955+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-12-22T14:55:10.356955+00:00'
[2024-12-22T16:15:08.633+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-12-22T16:15:08.679+0000] {sql.py:278} INFO - Executing: CREATE TABLE IF NOT EXISTS date_dim (
    date_id SERIAL PRIMARY KEY,  -- Identifiant unique pour chaque date
    date DATE NOT NULL,          -- Date complète
    year INT NOT NULL            -- Année (ex. 2024)
    month INT NOT NULL,          -- Mois de l'année (1-12)
    day INT NOT NULL            -- Jour (12)
);
[2024-12-22T16:15:08.703+0000] {base.py:84} INFO - Retrieving connection 'books_connection'
[2024-12-22T16:15:08.727+0000] {base.py:84} INFO - Retrieving connection 'books_connection'
[2024-12-22T16:15:08.744+0000] {sql.py:553} INFO - Running statement: CREATE TABLE IF NOT EXISTS date_dim (
    date_id SERIAL PRIMARY KEY,  -- Identifiant unique pour chaque date
    date DATE NOT NULL,          -- Date complète
    year INT NOT NULL            -- Année (ex. 2024)
    month INT NOT NULL,          -- Mois de l'année (1-12)
    day INT NOT NULL            -- Jour (12)
);, parameters: None
[2024-12-22T16:15:08.753+0000] {taskinstance.py:3311} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 422, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 284, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 498, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 558, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "month"
LINE 5:     month INT NOT NULL,          -- Mois de l'année (1-12)
            ^

[2024-12-22T16:15:08.821+0000] {taskinstance.py:1225} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_top_best_sellers_books, task_id=create_date_dim_table, run_id=manual__2024-12-22T14:55:10.356955+00:00, execution_date=20241222T145510, start_date=20241222T161505, end_date=20241222T161508
[2024-12-22T16:15:08.972+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-12-22T16:15:08.978+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 42 for task create_date_dim_table (syntax error at or near "month"
LINE 5:     month INT NOT NULL,          -- Mois de l'année (1-12)
            ^
; 1042)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3005, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3159, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3183, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 422, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 284, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 498, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 558, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "month"
LINE 5:     month INT NOT NULL,          -- Mois de l'année (1-12)
            ^

[2024-12-22T16:15:09.040+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2024-12-22T16:15:09.936+0000] {taskinstance.py:3895} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-12-22T16:15:09.947+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
